[package]
name = "ratatype"
version = "0.1.0"
edition = "2024"
authors = ["Pato Lankenau <rust@p.lankenau.io>"]
license = "MIT"
description = "A fast, minimalist yet feature packed typing test application for the terminal."
keywords = ["tui", "cli", "typing", "keyboard", "wpm"]
repository = "https://github.com/pato/ratatype"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
